--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.343.0",
-    "next": "^14.2.2",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.13",
     "next-connect": "^1.0.0",
     "next-themes": "^0.2.1",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
+    "resend": "^3.3.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -51,7 +52,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.2.2",
+    "eslint-config-next": "^14.2.4",
     "postcss": "^8",
     "prisma": "^5.11.0",
     "tailwindcss": "^3.3.0",
