--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.4.0",
+    "@auth/prisma-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,23 +22,23 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/render": "0.0.15",
     "@tanstack/react-table": "^8.15.3",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "lucide-react": "^0.343.0",
+    "lucide-react": "^0.395.0",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.13",
     "next-connect": "^1.0.0",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
-    "resend": "^3.3.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -51,7 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9.5.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8",
     "prisma": "^5.11.0",
