--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.13",
