--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^15.0.4",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
